Fix dropdowns behind search bar on mobile

--- a/themes/BC/assets/sass/_megamenu_clean.scss
+++ b/themes/BC/assets/sass/_megamenu_clean.scss
@@ -45,6 +45,7 @@
      background-color: rgba(16,14,15,.85);
      position: absolute;
      width: 100%;
+     z-index: 3;
  }
  .megamenu-container .nav a.menu-option {
      text-shadow: 0 2px 6px rgba(0, 0, 0,0.85);
